# libirc

./: README.md
ICPA/: AUTHORS  COPYING  ChangeLog  DESIGN  HACKING  NEWS  README  TODO
ICPA/MSVC/VC71/: ICPA.sln  ICPA_Common.vcproj  ICPA_Engine.vcproj  ICPA_GUI.vcproj  ICPA_text.vcproj
ICPA/include/: OSFile.h  TextUtils.h  commandArgs.h  common.h  prefs.h
ICPA/src/GUI_client/: GUI_client.cpp
ICPA/src/common/: OSFile.cpp  TextUtils.cpp  commandArgs.cpp  common.cpp  prefs.cpp
ICPA/src/engine/: agents.cpp  agents.h  engine.cpp
ICPA/src/text_client/: text_client.cpp
libirc/: .cproject  .project  AUTHORS  BUGS  ChangeLog  HACKING  Makefile.am  NEWS  README  ReadMe.txt  TODO  autogen.sh  configure.ac  libirc.ncb  stdafx.c
libirc/botlib/: Makefile.am
libirc/botlib/inc/: Makefile.am  botlib.h
libirc/botlib/src/: Makefile.am  botlib.cpp
libirc/botlib/vc12/: botlib.sln  botlib.vcxproj
libirc/botlib/vc7.1/: botlib.sln  botlib.vcproj
libirc/botlib/vc8/: botlib.sln  botlib.vcproj
libirc/examples/: Makefile.am
libirc/examples/simpleIRCConnect/: Makefile.am  readme.txt
libirc/examples/simpleIRCConnect/src/: Makefile.am  simpleIRCConnect.cpp
libirc/examples/simpleIRCConnect/vc12/: simpleIRCConnect.sln  simpleIRCConnect.vcxproj
libirc/examples/simpleIRCConnect/vc7.1/: simpleIRCConnect.sln  simpleIRCConnect.vcproj
libirc/examples/simpleIRCConnect/vc8/: simpleIRCConnect.sln  simpleIRCConnect.vcproj
libirc/examples/simpleTCPConnect/: Makefile.am  readme.txt
libirc/examples/simpleTCPConnect/src/: Makefile.am  simpleTCPConnect.cpp
libirc/examples/simpleTCPConnect/vc12/: simpleTCPConnect.sln  simpleTCPConnect.vcxproj
libirc/examples/simpleTCPConnect/vc7.1/: simpleTCPConnect.sln  simpleTCPConnect.vcproj
libirc/examples/simpleTCPConnect/vc8/: simpleTCPConnect.sln  simpleTCPConnect.vcproj
libirc/examples/spamBot/: readme.txt  sample.cfg  todo.txt
libirc/examples/spamBot/src/: Makefile.am  spamBot.cpp
libirc/examples/spamBot/vc12/: spamBot.sln  spamBot.vcxproj
libirc/examples/spamBot/vc7.1/: spamBot.sln  spamBot.vcproj
libirc/examples/spamBot/vc8/: spamBot.sln  spamBot.vcproj
libirc/examples/stupidBot/: Makefile.am  URLManager.cpp  readme.txt  sample.cfg  sampple.cfg
libirc/examples/stupidBot/src/: Makefile.am  URLManager.cpp  URLManager.h  stupidBot.cpp
libirc/examples/stupidBot/vc12/: stupidBot.sln  stupidBot.vcxproj
libirc/examples/stupidBot/vc7.1/: stupidBot.sln  stupidBot.vcproj
libirc/examples/stupidBot/vc8/: stupidBot.sln  stupidBot.vcproj
libirc/examples/stupidServer/: Makefile.am  readme.txt
libirc/examples/stupidServer/src/: Makefile.am  stupidServer.cpp
libirc/examples/stupidServer/vc12/: stupidServer.sln  stupidServer.vcxproj
libirc/examples/stupidServer/vc7.1/: stupidServer.sln  stupidServer.vcproj
libirc/examples/stupidServer/vc8/: stupidServer.sln  stupidServer.vcproj
libirc/include/: IRCChannels.h  IRCClient.h  IRCEvents.h  IRCNumerics.h  IRCServer.h  IRCTextUtils.h  IRCUserManager.h  Makefile.am  TCPConnection.h  TCPSocetTypes.h  TextUtils.h  avltree.h  conf.h  defs.h  funcptrs.h  hashtable.h  ircCommands.h  libIRC.h  macros_priv.h  net.h
libirc/m4/: Makefile.am
libirc/misc/: Makefile.am  cvs2cl.pl  elapsed.sh  vers.sh
libirc/src/: IRCChannels.cpp  IRCClient.cpp  IRCServer.cpp  IRCTextUtils.cxx  IRCUserManager.cpp  Makefile  Makefile.am  TCPConnection.cpp  TextUtils.cxx  avltree.c  bufsock.cpp  cmd.h  ctcp.c  ctcp.h  hashtable.c  irClientCommands.cpp  irClientEvents.cpp  ircBasicCommands.cpp  ircBasicCommands.h  ircCommands.cpp  irc_core.c  irc_core.h  irc_funcs.cpp  irc_rpl.h  irc_version.h  libIRC.cpp  list.cpp  list.h  map.c  map.cpp  net.cpp  tcp.cpp  tcp.h  trace.h  util.cpp  util.h
libirc/src/old_code/: avltree.cpp  bufsock.cpp  bufsock.h  errcodes.h  irc_core.cpp  list.cpp  map.cpp  map.h  trace.cpp
libirc/src/sdl_net/: CHANGES  Makefile.am  SDL_net.h  SDLnet.cpp  SDLnetTCP.cpp  SDLnetUDP.cpp  SDLnetselect.cpp  SDLnetsys.h
libirc/test/: main.c  test.vcproj
libirc/test2/: maptest.c
libirc/tests/test/: Makefile
libirc/tests/test/src/: main.cpp
libirc/tests/test/vc7.1/: test.sln  test.vcproj
libirc/tests/test2/: hashtest.cpp
libirc/vc12/: libirc.sln  libirc.vcxproj
libirc/vc6/: libirc.dsp  libirc.dsw
libirc/vc7.1/: libirc.sln  libirc.vcproj
libirc/vc8/: libirc.vcproj
