# $Id$

lib_LTLIBRARIES = libIRC.la

libIRC_la_SOURCES = 	\
	TCPConnection.cpp \
	IRCTextUtils.cxx	\
	ircCommands.cpp	\
	libIRC.cpp 		\
	IRCClient.cpp 		\
	IRCServer.cpp 		\
	ircClientCommands.cpp \
	ircClientEvents.cpp   \
	ircBasicCommands.cpp

MAINTAINERCLEANFILES = Makefile.in

include $(top_srcdir)/misc/Makefile.defs
